config/kubernetes-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tms-frontend-deployment
  labels:
    app: tms-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tms-frontend
  template:
    metadata:
      labels:
        app: tms-frontend
    spec:
      containers:
        - name: tms-frontend
          image: ayuzzz1995/tms-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tms-frontend-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 80
  selector:
    app: tms-frontend
